# ClubVoice

./: .gitignore  ACCEPTANCE_REPORT.md  AUDIO_DUCKING.md  BUILD_DEPLOY_GUIDE.md  CLEANUP.md  COMPLETION_CHECKLIST.md  ClubVoice.spec  ClubVoiceStreamer.spec  DUAL_CABLE_SETUP.md  IMPLEMENTATION_COMPLETE.txt  LICENSE  LOGGING_GUIDE.md  MPV_DUCKING_GUIDE.md  MPV_MUSIC_SETUP.md  PROJECT_COMPLETION_REPORT.md  QUICK_FIX_WEBSOCKET.md  QUICK_REFERENCE.md  README.md  STREAMONLY.md  TECHNICAL_SUMMARY.md  TESTING.md  VoiceCommunicationApp.spec  WEBSOCKET_500_FIX_REPORT.md  adjust_cable_volume.py  analyze_cable_config.py  build_exe.bat  check_audio_transmission.py  check_browser_to_clubdeck.py  check_flask_status.py  cleanup.py  clubdeck_volume_guide.py  config.ini  config.json  debug_config.py  deploy_remote.bat  diagnose_browser_audio.py  diagnose_clubdeck_audio.py  diagnose_websocket.py  diagnose_websocket_v2.py  find_clubdeck_device.py  (+28 more)
.github/: copilot-instructions.md
doc/: HOTFIX_WEBSOCKET_500.md  MIXER_GUIDE.md  PWA_GUIDE.md  QUICK_REFERENCE.md  WEBSOCKET_FIX_LOG.md
hls/: stream.m3u8  stream211.ts  stream212.ts  stream213.ts  stream214.ts  stream215.ts  stream216.ts  stream217.ts
src/: __init__.py  bootstrap.py  hls_streamer.py  main.py
static/: debug.html  full.html  index.html  integration-template.html  manifest.json  sdk-demo.html  sw.js
test/: check_device.py  test_all_devices.py  test_audio_ducking.py  test_audio_ducking_mpv.py  test_wasapi_devices.py
tests/: test_audio.py  test_cleanup.py  test_websocket.py
tools/: README.md  __init__.py  generate_icons.py  (+5 more)
(+21 files in other folders)
