[project]
name = "clubvoice"
version = "0.1.0"
description = "ClubVoice - 浏览器 ↔ Clubdeck 实时语音通信应用"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Flask>=3.0.0",
    "Flask-SocketIO>=5.3.0",
    "numpy>=1.24.0",
    "eventlet>=0.34.0",
    "sounddevice>=0.4.6",
    "rich>=13.0.0",
]

[project.scripts]
voice-app = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]